--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,7 @@ li {
   color: #ffffff;
   font-size: 18px;
   font-weight: 100;
+  text-transform: capitalize;
   line-height: 20px;
   text-align: center;
   margin-bottom: 40px;
