--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,8 @@ li:first-letter {
 .current-temperature {
   color: white;
   text-align: center;
+  position: relative;
+  top: 34px;
 }
 .current-temperature strong {
   font-size: 60px;
@@ -69,7 +71,7 @@ li:first-letter {
   display: inline-block;
   text-align: left;
   position: relative;
-  top: 15px;
+  top: 53px;
 }
 
 .extra-info {
@@ -85,6 +87,10 @@ li:first-letter {
 
 #weather-icon {
   text-align: center;
-  font-size: 100px;
-  color: #ffffff;
+}
+
+#icon {
+  width: 90%;
+  height: auto;
+  vertical-align: top;
 }
