--- a/src/style.css
+++ b/src/style.css
@@ -107,12 +107,32 @@ li:first-letter {
   color: #ff6d6d;
 }
 
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.weather-forecast {
+  font-size: 16px;
+  color: #8a8a8a;
+}
+
+.weather-forecast-temperatures {
+  font-size: 13px;
+  font-weight: 600;
+  color: #ff6d6d;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.6;
+}
+
 .git-link {
   text-decoration: none;
   color: #e2c300;
 }
+
 .git-link:hover {
-  text-decoration: underline;
   color: #e2c300;
 }
 
